test_suite/tests/ui/identifier/field_struct.stderr
error: `field_identifier` can only be used on an enum
  --> $DIR/field_struct.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

